界面基本完成

--- a/views/interface-end.html
+++ b/views/interface-end.html
@@ -18,14 +18,14 @@
 
             <div class="collapse navbar-collapse" >
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/front">MOCK-FRONT</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/end">MOCK-END</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">系统使用说明</a>
+                        <a class="nav-link" href="#">OTHER</a>
                     </li>
                 </ul>
             </div>
@@ -33,8 +33,8 @@
         <div class="rows mb-2">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/front">MOCK-FRONT</a></li>
-                    <li class="breadcrumb-item active">PROJECT-LIST</li>
+                    <li class="breadcrumb-item"><a href="/end">MOCK-END</a></li>
+                    <li class="breadcrumb-item active">INTERFACE-LIST</li>
                 </ol>
             </nav>
         </div>
