--- a/views/interface-front.html
+++ b/views/interface-front.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/end">MOCK-END</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">系统使用说明</a>
+                        <a class="nav-link" href="#">OTHER</a>
                     </li>
                 </ul>
             </div>
@@ -34,7 +34,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/front">MOCK-FRONT</a></li>
-                    <li class="breadcrumb-item active">PROJECT-LIST</li>
+                    <li class="breadcrumb-item active">INTERFACE-LIST</li>
                 </ol>
             </nav>
         </div>
