--- a/views/project-front.html
+++ b/views/project-front.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/end">MOCK-END</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">系统使用说明</a>
+                        <a class="nav-link" href="#">OTHER</a>
                     </li>
                 </ul>
             </div>
