--- a/views/interface-end.html
+++ b/views/interface-end.html
@@ -34,10 +34,16 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/end">MOCK-END</a></li>
-                    <li class="breadcrumb-item active">INTERFACE-LIST</li>
+                    <li class="breadcrumb-item"><a href="/end/project">项目列表</a></li>
+                    <li class="breadcrumb-item active">接口列表</li>
                 </ol>
             </nav>
         </div>
+
+        <div class="rows mb-2">
+            <button type="button" class="btn btn-success">新增接口</button>
+        </div>
+
         <div class="rows mb-8">
             <form class="form-inline">
                 <div class="form-group mb-2">
