--- a/views/project-end.html
+++ b/views/project-end.html
@@ -30,14 +30,20 @@
                 </ul>
             </div>
         </nav>
+
         <div class="rows mb-2">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/end">MOCK-END</a></li>
-                    <li class="breadcrumb-item active">PROJECT-LIST</li>
+                    <li class="breadcrumb-item active">项目列表</li>
                 </ol>
             </nav>
         </div>
+
+        <div class="rows mb-2">
+            <button type="button" class="btn btn-success">新增项目</button>
+        </div>
+
         <div class="rows mb-8">
             <form class="form-inline">
                 <div class="form-group mb-2">
